# azure-102

./: .env.example  .gitignore  README.md  app.py  app_extract_image_tags_captions.py  app_language.py  app_text_to_speach.py  app_translate.py  app_web_search.py  main.py  pyproject.toml
translate/: text.txt
